--- a/ANAChat/Classes/UIComponents/StoryBoards/SDKMain.storyboard
+++ b/ANAChat/Classes/UIComponents/StoryBoards/SDKMain.storyboard
@@ -22,10 +22,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oVO-he-c7Q">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="74"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="64"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chatty" translatesAutoresizingMaskIntoConstraints="NO" id="3ZY-X9-oHR">
-                                        <rect key="frame" x="59" y="27.5" width="35" height="35"/>
+                                        <rect key="frame" x="59" y="22.5" width="35" height="35"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="35" id="bGz-no-3vk"/>
@@ -33,7 +33,7 @@
                                         </constraints>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QvW-DA-HHP">
-                                        <rect key="frame" x="17" y="29" width="25" height="32"/>
+                                        <rect key="frame" x="17" y="24" width="25" height="32"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="32" id="CdT-aW-RkC"/>
                                             <constraint firstAttribute="width" constant="25" id="YoY-3y-yR9"/>
@@ -44,7 +44,7 @@
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Chatty" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2fo-UZ-7h8">
-                                        <rect key="frame" x="108" y="27.5" width="54" height="19"/>
+                                        <rect key="frame" x="108" y="22.5" width="54" height="19"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="19" id="Noj-5z-f7s"/>
                                         </constraints>
@@ -53,7 +53,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Trying to connect" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hX4-sT-Czp">
-                                        <rect key="frame" x="108" y="48.5" width="247" height="14"/>
+                                        <rect key="frame" x="108" y="43.5" width="247" height="14"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="14" id="Jou-HJ-kmM"/>
                                         </constraints>
@@ -69,7 +69,7 @@
                                     <constraint firstItem="2fo-UZ-7h8" firstAttribute="leading" secondItem="3ZY-X9-oHR" secondAttribute="trailing" constant="14" id="8jb-eD-QDe"/>
                                     <constraint firstAttribute="trailing" secondItem="hX4-sT-Czp" secondAttribute="trailing" constant="20" id="Hc3-Ht-Yuf"/>
                                     <constraint firstItem="QvW-DA-HHP" firstAttribute="leading" secondItem="oVO-he-c7Q" secondAttribute="leading" constant="17" id="NZX-b6-vlx"/>
-                                    <constraint firstAttribute="height" constant="74" id="Oy8-Xh-Yd8"/>
+                                    <constraint firstAttribute="height" constant="64" id="Oy8-Xh-Yd8"/>
                                     <constraint firstItem="2fo-UZ-7h8" firstAttribute="centerY" secondItem="3ZY-X9-oHR" secondAttribute="centerY" constant="-8" id="WRM-bL-Ma0"/>
                                     <constraint firstItem="hX4-sT-Czp" firstAttribute="top" secondItem="2fo-UZ-7h8" secondAttribute="bottom" constant="2" id="Xe1-e8-jkZ"/>
                                     <constraint firstItem="3ZY-X9-oHR" firstAttribute="leading" secondItem="QvW-DA-HHP" secondAttribute="trailing" constant="17" id="eGr-7K-5vb"/>
@@ -77,8 +77,8 @@
                                     <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="2fo-UZ-7h8" secondAttribute="trailing" constant="20" symbolic="YES" id="kA0-Wj-dDf"/>
                                 </constraints>
                             </view>
-                            <imageView userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bgDoodle" translatesAutoresizingMaskIntoConstraints="NO" id="Y4J-MY-LW6">
-                                <rect key="frame" x="0.0" y="74" width="375" height="593"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bgDoodle" translatesAutoresizingMaskIntoConstraints="NO" id="Y4J-MY-LW6">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                             </imageView>
                             <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BMS-aZ-VHj">
                                 <rect key="frame" x="0.0" y="667" width="375" height="0.0"/>
@@ -88,7 +88,7 @@
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="mxg-XC-nau">
-                                <rect key="frame" x="0.0" y="74" width="375" height="593"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <connections>
