--- a/ANAChat/Classes/UIComponents/StoryBoards/SDKMain.storyboard
+++ b/ANAChat/Classes/UIComponents/StoryBoards/SDKMain.storyboard
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="1tC-M2-Rj1">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="1tC-M2-Rj1">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Chat View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController storyboardIdentifier="ChatViewController" id="BYZ-38-t0r" customClass="ChatViewController" customModule="ANAChat" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ChatViewController" id="BYZ-38-t0r" customClass="ChatViewController" customModule="NowFloats_iOSSDK" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -22,10 +22,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oVO-he-c7Q">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="64"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="74"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chatty" translatesAutoresizingMaskIntoConstraints="NO" id="3ZY-X9-oHR">
-                                        <rect key="frame" x="59" y="22.5" width="35" height="35"/>
+                                        <rect key="frame" x="59" y="27.5" width="35" height="35"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="35" id="bGz-no-3vk"/>
@@ -33,7 +33,7 @@
                                         </constraints>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QvW-DA-HHP">
-                                        <rect key="frame" x="17" y="24" width="25" height="32"/>
+                                        <rect key="frame" x="17" y="29" width="25" height="32"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="32" id="CdT-aW-RkC"/>
                                             <constraint firstAttribute="width" constant="25" id="YoY-3y-yR9"/>
@@ -44,7 +44,7 @@
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Chatty" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2fo-UZ-7h8">
-                                        <rect key="frame" x="108" y="22.5" width="54" height="19"/>
+                                        <rect key="frame" x="108" y="27.5" width="54" height="19"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="19" id="Noj-5z-f7s"/>
                                         </constraints>
@@ -53,7 +53,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Trying to connect" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hX4-sT-Czp">
-                                        <rect key="frame" x="108" y="43.5" width="247" height="14"/>
+                                        <rect key="frame" x="108" y="48.5" width="247" height="14"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="14" id="Jou-HJ-kmM"/>
                                         </constraints>
@@ -61,6 +61,17 @@
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LIe-9c-cBu">
+                                        <rect key="frame" x="328" y="30" width="30" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="e4T-yo-hIf"/>
+                                            <constraint firstAttribute="width" constant="30" id="ulu-Ll-tcV"/>
+                                        </constraints>
+                                        <state key="normal" image="reloadIcon"/>
+                                        <connections>
+                                            <action selector="reloadChatTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="xnl-rm-0Hk"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.86666666670000003" green="0.26274509800000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
@@ -69,16 +80,18 @@
                                     <constraint firstItem="2fo-UZ-7h8" firstAttribute="leading" secondItem="3ZY-X9-oHR" secondAttribute="trailing" constant="14" id="8jb-eD-QDe"/>
                                     <constraint firstAttribute="trailing" secondItem="hX4-sT-Czp" secondAttribute="trailing" constant="20" id="Hc3-Ht-Yuf"/>
                                     <constraint firstItem="QvW-DA-HHP" firstAttribute="leading" secondItem="oVO-he-c7Q" secondAttribute="leading" constant="17" id="NZX-b6-vlx"/>
-                                    <constraint firstAttribute="height" constant="64" id="Oy8-Xh-Yd8"/>
+                                    <constraint firstAttribute="height" constant="74" id="Oy8-Xh-Yd8"/>
+                                    <constraint firstItem="LIe-9c-cBu" firstAttribute="centerY" secondItem="QvW-DA-HHP" secondAttribute="centerY" id="Siy-1q-Ta7"/>
                                     <constraint firstItem="2fo-UZ-7h8" firstAttribute="centerY" secondItem="3ZY-X9-oHR" secondAttribute="centerY" constant="-8" id="WRM-bL-Ma0"/>
                                     <constraint firstItem="hX4-sT-Czp" firstAttribute="top" secondItem="2fo-UZ-7h8" secondAttribute="bottom" constant="2" id="Xe1-e8-jkZ"/>
+                                    <constraint firstAttribute="trailing" secondItem="LIe-9c-cBu" secondAttribute="trailing" constant="17" id="cF7-W3-hvy"/>
                                     <constraint firstItem="3ZY-X9-oHR" firstAttribute="leading" secondItem="QvW-DA-HHP" secondAttribute="trailing" constant="17" id="eGr-7K-5vb"/>
                                     <constraint firstItem="hX4-sT-Czp" firstAttribute="leading" secondItem="2fo-UZ-7h8" secondAttribute="leading" id="fbV-Lu-793"/>
                                     <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="2fo-UZ-7h8" secondAttribute="trailing" constant="20" symbolic="YES" id="kA0-Wj-dDf"/>
                                 </constraints>
                             </view>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bgDoodle" translatesAutoresizingMaskIntoConstraints="NO" id="Y4J-MY-LW6">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                            <imageView userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bgDoodle" translatesAutoresizingMaskIntoConstraints="NO" id="Y4J-MY-LW6">
+                                <rect key="frame" x="0.0" y="74" width="375" height="593"/>
                             </imageView>
                             <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BMS-aZ-VHj">
                                 <rect key="frame" x="0.0" y="667" width="375" height="0.0"/>
@@ -88,7 +101,7 @@
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="mxg-XC-nau">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <rect key="frame" x="0.0" y="74" width="375" height="593"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <connections>
@@ -149,7 +162,7 @@
         <!--Zoom View Controller-->
         <scene sceneID="a1S-VC-AS9">
             <objects>
-                <viewController storyboardIdentifier="ZoomViewController" id="Kyn-Vc-1xi" customClass="ZoomViewController" customModule="ANAChat" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ZoomViewController" id="Kyn-Vc-1xi" customClass="ZoomViewController" customModule="NowFloats_iOSSDK" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Deq-FY-EYp"/>
                         <viewControllerLayoutGuide type="bottom" id="DgP-yy-bZQ"/>
@@ -196,7 +209,7 @@
         <!--Web View Controller-->
         <scene sceneID="vr4-pz-btl">
             <objects>
-                <viewController storyboardIdentifier="WebViewController" id="jFf-ZF-ddQ" customClass="WebViewController" customModule="ANAChat" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="WebViewController" id="jFf-ZF-ddQ" customClass="WebViewController" customModule="NowFloats_iOSSDK" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Ge0-1u-r9c"/>
                         <viewControllerLayoutGuide type="bottom" id="VFS-kd-58R"/>
@@ -270,7 +283,7 @@
         <!--Starting View Controller-->
         <scene sceneID="gZY-OB-dB2">
             <objects>
-                <viewController id="4wb-89-XOD" customClass="NFStartingViewController" customModule="ANAChat" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="4wb-89-XOD" customClass="NFStartingViewController" customModule="NowFloats_iOSSDK" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="oNZ-TA-fiY"/>
                         <viewControllerLayoutGuide type="bottom" id="nL9-8D-MPo"/>
@@ -326,6 +339,7 @@
         <image name="backIcon" width="14" height="22"/>
         <image name="bgDoodle" width="540" height="693"/>
         <image name="chatty" width="50" height="50"/>
+        <image name="reloadIcon" width="32" height="32"/>
         <image name="safariIcon" width="32" height="32"/>
     </resources>
 </document>
